Fixing the styling so it looks better on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 .hero {
-    width: 700px;
+    width: 100%;
+    max-width: 700px;
     margin: 0 auto;
     font-family:Arial, Helvetica, sans-serif;
-
+    padding: 20px 0;
     margin-top: 100px;
 }
 
